--- a/fe/browse.html
+++ b/fe/browse.html
@@ -82,18 +82,6 @@
   <div class="absolute z-10 top-[30%] mt:top-[40%] ml-4 md:ml-16">
       <p class="text-white text-1xl md:text-5xl h-full w-[50%] lg:text-6xl font-bold drop-shadow-xl">{{ main_video_data.title }}</p>
       <p class="text-white text-[8px] md:text-lg mt-3 md:mt-8 w-[90%] md:w-[80%] lg:w-[50%] drop-shadow-xl">{{ main_video_data.description }}</p>
-      <div class="flex flex-row items-center mt-3 md:mt-4 gap-3">
-          {% autoescape off %}
-            {{ main_video_button }}
-          {% endautoescape %}
-          <button id="main-video-info-button" class="bg-white text-white bg-opacity-30 rounded-md py-1 md:py-2 px-2 md:px-4 text-xs w-auto lg:text-lg font-semibold flex flex-row items-center hover:bg-opacity-20 transition" data-movieid='{{ main_video_data.id }}'>
-              <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" class="mr-2" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path>
-                  <path d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"></path>
-              </svg>
-              More info
-          </button>
-      </div>
   </div>
 </div>
 <div class="max-w-2xl mx-auto py-8 px-4 sm:px-6 lg:max-w-7xl lg:px-8">
@@ -112,6 +100,7 @@
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 <script>
+  var userAuthenticated = {% if user.is_authenticated %}true{% else %}false{% endif %};
   toastr.options = {
       "closeButton": false,
       "debug": false,
@@ -129,94 +118,85 @@
       "showMethod": "fadeIn",
       "hideMethod": "fadeOut"
   };
-  q("#main-video-info-button").onclick = () => {
-      q("#video-player").setAttribute("poster", "{{ main_video_data.cover_image_url }}".replaceAll("&amp;","&"));
-      q("#popup-movie-title").innerText = "{{ main_video_data.title }}";
-      q("#popup-movie-release-year").innerText = "{{ main_video_data.release_year }}";
-      q("#popup-movie-price").innerText = "{{ main_video_data.price }}";
-      q("#popup-movie-director").innerText = "{{ main_video_data.director }}";
-      q("#popup-movie-duration").innerText = "{{ main_video_data.duration }}";
-      q("#popup-movie-genres").innerText = "{{ main_video_data.genres }}";
-      q("#popup-movie-description").innerText = "{{ main_video_data.description }}";
-      q("#popup-container").classList.remove("hidden");
-  }
   q("#close-popup-button").onclick = () => {
       q("#popup-container").classList.add("hidden");
       q("#popup-movie-title").classList.remove("hidden");
-      if ([...q("#popup-video-play-button").classList].indexOf("hidden") > -1) q("#popup-video-play-button").classList.remove("hidden");
+      if (q("#popup-video-play-button") && [...q("#popup-video-play-button").classList].indexOf("hidden") > -1) q("#popup-video-play-button").classList.remove("hidden");
       if ([...q("#video-player").classList].indexOf("brightness-[60%]") == -1) q("#video-player").classList.add("brightness-[60%]");
       q("#video-player").src = "";
       if (q("#video-player").getAttribute("controls") == "true") q("#video-player").removeAttribute("controls");
   }
   function openPopup(movieData, isBought) {
-      var movieDataObj = JSON.parse(movieData);
-      if (isBought == "true") {
-        if ([...q("#popup-video-play-button").classList].indexOf("hidden") > -1) q("#popup-video-play-button").classList.remove("hidden");
-        if ([...q("#popup-video-buy-button").classList].indexOf("hidden") == -1) q("#popup-video-buy-button").classList.add("hidden");
-        q("#popup-video-play-button").onclick = () => {
-          fetch(apiHost + "/films/" + movieDataObj.id, {
-            method: "GET",
-            headers: {
-              Authorization: "Bearer " + localStorage.getItem("token")
-            }
-          }).then(fetchdata => fetchdata.json()).then(filmdata => {
-                if (filmdata["status"] == "success") {
-                  q("#video-player").src = filmdata["data"]["video_url"];
-                  q("#popup-movie-title").classList.add("hidden");
-                  q("#popup-video-play-button").classList.add("hidden");
-                  q("#video-player").setAttribute("controls", "true");
-                  q("#video-player").classList.remove("brightness-[60%]");
-                  q("#video-player").play();
-                } else if (filmdata["message"] == "Unauthorized") window.location.href = "accounts/login";
-                else {
-                  toastr.error(filmdata["message"]);
-                  console.error(filmdata["message"]);
-                }
-          });
-        };
-      } else {
-        if ([...q("#popup-video-play-button").classList].indexOf("hidden") == -1) q("#popup-video-play-button").classList.add("hidden");
-        if ([...q("#popup-video-buy-button").classList].indexOf("hidden") > -1) q("#popup-video-buy-button").classList.remove("hidden");
-        q("#popup-video-buy-button").onclick = () => {
-          fetch(apiHost + "/buy/" + movieDataObj.id, {
-            method: "POST",
-            headers: {
-              Authorization: "Bearer " + localStorage.getItem("token")
-            }
-          }).then(fetchdata => fetchdata.json()).then(buydata => {
-                if (buydata["status"] == "success") {
-                  q("#user-balance").innerText = buydata["balance"];
-                  fetch(apiHost + "/films/" + movieDataObj.id, {
-                    method: "GET",
-                    headers: {
-                      Authorization: "Bearer " + localStorage.getItem("token")
-                    }
-                  }).then(fetchdata => fetchdata.json()).then(filmdata => {
-                        if (filmdata["status"] == "success") {
-                          q("#video-player").src = filmdata["data"]["video_url"];
-                          if ([...q("#popup-video-play-button").classList].indexOf("hidden") > -1) q("#popup-video-play-button").classList.remove("hidden");
-                          if ([...q("#popup-video-buy-button").classList].indexOf("hidden") == -1) q("#popup-video-buy-button").classList.add("hidden");
-                          listMovie();
-                          q("#popup-video-play-button").onclick = () => {
-                            q("#popup-movie-title").classList.add("hidden");
-                            q("#popup-video-play-button").classList.add("hidden");
-                            q("#video-player").setAttribute("controls", "true");
-                            q("#video-player").classList.remove("brightness-[60%]");
-                            q("#video-player").play();
-                          };
-                        } else if (filmdata["message"] == "Unauthorized") window.location.href = "accounts/login";
-                        else {
-                          toastr.error(filmdata["message"]);
-                          console.error(filmdata["message"]);
-                        }
-                  });
-                } else if (buydata["message"] == "Unauthorized") window.location.href = "accounts/login";
-                else {
-                  toastr.error(buydata["message"]);
-                  console.error(buydata["message"]);
-                }
-          });
-        };
+    var movieDataObj = JSON.parse(atob(movieData));
+      if (userAuthenticated) {
+        if (isBought == "true") {
+          if ([...q("#popup-video-play-button").classList].indexOf("hidden") > -1) q("#popup-video-play-button").classList.remove("hidden");
+          if ([...q("#popup-video-buy-button").classList].indexOf("hidden") == -1) q("#popup-video-buy-button").classList.add("hidden");
+          q("#popup-video-play-button").onclick = () => {
+            fetch(apiHost + "/films/" + movieDataObj.id, {
+              method: "GET",
+              headers: {
+                Authorization: "Bearer " + localStorage.getItem("token")
+              }
+            }).then(fetchdata => fetchdata.json()).then(filmdata => {
+                  if (filmdata["status"] == "success") {
+                    q("#video-player").src = filmdata["data"]["video_url"];
+                    q("#popup-movie-title").classList.add("hidden");
+                    q("#popup-video-play-button").classList.add("hidden");
+                    q("#video-player").setAttribute("controls", "true");
+                    q("#video-player").classList.remove("brightness-[60%]");
+                    q("#video-player").play();
+                  } else if (filmdata["message"] == "Unauthorized") window.location.href = "accounts/login";
+                  else {
+                    toastr.error(filmdata["message"]);
+                    console.error(filmdata["message"]);
+                  }
+            });
+          };
+        } else {
+          if ([...q("#popup-video-play-button").classList].indexOf("hidden") == -1) q("#popup-video-play-button").classList.add("hidden");
+          if ([...q("#popup-video-buy-button").classList].indexOf("hidden") > -1) q("#popup-video-buy-button").classList.remove("hidden");
+          q("#popup-video-buy-button").onclick = () => {
+            fetch(apiHost + "/buy/" + movieDataObj.id, {
+              method: "POST",
+              headers: {
+                Authorization: "Bearer " + localStorage.getItem("token")
+              }
+            }).then(fetchdata => fetchdata.json()).then(buydata => {
+                  if (buydata["status"] == "success") {
+                    q("#user-balance").innerText = buydata["balance"];
+                    fetch(apiHost + "/films/" + movieDataObj.id, {
+                      method: "GET",
+                      headers: {
+                        Authorization: "Bearer " + localStorage.getItem("token")
+                      }
+                    }).then(fetchdata => fetchdata.json()).then(filmdata => {
+                          if (filmdata["status"] == "success") {
+                            q("#video-player").src = filmdata["data"]["video_url"];
+                            if ([...q("#popup-video-play-button").classList].indexOf("hidden") > -1) q("#popup-video-play-button").classList.remove("hidden");
+                            if ([...q("#popup-video-buy-button").classList].indexOf("hidden") == -1) q("#popup-video-buy-button").classList.add("hidden");
+                            listMovie();
+                            q("#popup-video-play-button").onclick = () => {
+                              q("#popup-movie-title").classList.add("hidden");
+                              q("#popup-video-play-button").classList.add("hidden");
+                              q("#video-player").setAttribute("controls", "true");
+                              q("#video-player").classList.remove("brightness-[60%]");
+                              q("#video-player").play();
+                            };
+                          } else if (filmdata["message"] == "Unauthorized") window.location.href = "accounts/login";
+                          else {
+                            toastr.error(filmdata["message"]);
+                            console.error(filmdata["message"]);
+                          }
+                    });
+                  } else if (buydata["message"] == "Unauthorized") window.location.href = "accounts/login";
+                  else {
+                    toastr.error(buydata["message"]);
+                    console.error(buydata["message"]);
+                  }
+            });
+          };
+        }
       }
       q("#video-player").setAttribute("poster", movieDataObj.cover_image_url);
       q("#popup-movie-title").innerText = movieDataObj.title;
@@ -248,19 +228,20 @@
   var fetchMovie = (boughtMovies) => fetch(apiHost + "/films").then(fetchdata => fetchdata.json()).then(filmsdata => {
       if (filmsdata["status"] == "success") {
         if (boughtMovies && boughtMovies.length > 0) {
+          if ([...q("#bought-movies-placeholder").classList].indexOf("hidden") > -1) q("#bought-movies-placeholder").classList.remove("hidden");
           q("#available-movies").innerHTML = "";
           q("#bought-movies").innerHTML = "";
           for (i in filmsdata["data"]) {
             var currentMovieData = filmsdata["data"][i];
-            if (boughtMovies.indexOf(currentMovieData.id) > -1) q("#bought-movies").innerHTML += movieCard("true", currentMovieData.title, currentMovieData.release_year, currentMovieData.price, currentMovieData.genre.join(", "), currentMovieData.cover_image_url, JSON.stringify(currentMovieData));
-            else q("#available-movies").innerHTML += movieCard("false", currentMovieData.title, currentMovieData.release_year, currentMovieData.price, currentMovieData.genre.join(", "), currentMovieData.cover_image_url, JSON.stringify(currentMovieData));
+            if (boughtMovies.indexOf(currentMovieData.id) > -1) q("#bought-movies").innerHTML += movieCard("true", currentMovieData.title, currentMovieData.release_year, currentMovieData.price, currentMovieData.genre.join(", "), currentMovieData.cover_image_url, btoa(JSON.stringify(currentMovieData)));
+            else q("#available-movies").innerHTML += movieCard("false", currentMovieData.title, currentMovieData.release_year, currentMovieData.price, currentMovieData.genre.join(", "), currentMovieData.cover_image_url, btoa(JSON.stringify(currentMovieData)));
           }
         } else {
-          q("#bought-movies-placeholder").innerHTML = "";
+          q("#bought-movies-placeholder").classList.add("hidden");
           q("#available-movies").innerHTML = "";
           for (i in filmsdata["data"]) {
             var currentMovieData = filmsdata["data"][i];
-            q("#available-movies").innerHTML += movieCard("false", currentMovieData.title, currentMovieData.release_year, currentMovieData.price, currentMovieData.genre.join(", "), currentMovieData.cover_image_url, JSON.stringify(currentMovieData));
+            q("#available-movies").innerHTML += movieCard("false", currentMovieData.title, currentMovieData.release_year, currentMovieData.price, currentMovieData.genre.join(", "), currentMovieData.cover_image_url, btoa(JSON.stringify(currentMovieData)));
           }
         }
       } else {
@@ -269,7 +250,6 @@
       }
   });
   function listMovie() {
-    var userAuthenticated = true;
     if (userAuthenticated) {
         fetch(apiHost + "/bought", {
           method: "GET",
